Minor css fix: stop image stretched vertically in content view

--- a/internal/view/less/stylesheet.less
+++ b/internal/view/less/stylesheet.less
@@ -486,6 +486,7 @@ a {
         }
 
         img {
+            height: auto;
             max-width: 100%;
         }
     }
